# zksync-os-agents

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml
.cargo/: config.toml
block-rebuild-maintainer/: AGENTS.md  Cargo.toml
block-rebuild-maintainer/knowledge/: rebuild.md
block-rebuild-maintainer/tests/: Cargo.toml
block-rebuild-maintainer/tests/src/: lib.rs
block-rebuild-maintainer/tests/tests/: rebuild.rs
l1-settle/: AGENTS.md  Cargo.toml
l1-settle/knowledge/: final-report.md  open-questions.md  overview.md  test-plan.md
l1-settle/tests/: Cargo.toml
l1-settle/tests/src/: helpers.rs
l1-settle/tests/tests/: integration_2fa.rs  integration_happy_path.rs  integration_passthrough.rs  unit_2fa.rs  unit_calldata.rs  unit_execute.rs  unit_snark_public_input.rs  unit_stored_batch_info.rs
pipeline-correctness/: AGENTS.md
pipeline-correctness/knowledge/: final-report.md  overview.md  pipeline-correctness.md  test-plan.md
pipeline-correctness/tests/: Cargo.toml
pipeline-correctness/tests/src/: backpressure.rs  block_applier.rs  block_canonizer.rs  canonization.rs  canonizer.rs  crash_recovery.rs  lib.rs  mocks.rs  overlay.rs  overlay_buffer.rs  pipeline_flow.rs  replay_storage.rs  sequencer.rs  state_override.rs
runner/: Cargo.toml
runner/src/: claude.rs  codex.rs  gh.rs  git.rs  main.rs  prompts.rs
sepolia-deploy/: AGENTS.md  Cargo.toml  deploy.sh  generate_server_config.py
sepolia-deploy/knowledge/: final-report.md  overview.md  test-plan.md
sepolia-deploy/tests/: Cargo.toml
sepolia-deploy/tests/src/: config_gen.rs  lib.rs
sepolia-deploy/tests/tests/: config_generation.rs  gas_costs.rs
tx-inclusion-server-restart/: PR_DESCRIPTION.md
tx-inclusion-server-restart/external-tests/: .gitignore  Cargo.toml
tx-inclusion-server-restart/external-tests/baselines/: external_node_inclusion.json  open_block_random_arrival.json
tx-inclusion-server-restart/external-tests/src/: lib.rs
tx-inclusion-server-restart/external-tests/tests/: basic_tx_lifecycle.rs  block_time_experiment.rs  external_node_inclusion_experiment.rs  external_node_restart_regressions.rs  inclusion_consistency.rs  open_block_random_arrival.rs  receipt_consistency_main_vs_en.rs  restart_regressions.rs
tx-inclusion-server-restart/knowledge/: final-report.md  overview.md  test-plan.md  tx-inclusion-restart.md
