[workspace]
members = ["block-rebuild-maintainer/tests"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["romanbrodetski-ai"]
homepage = "https://github.com/romanbrodetski-ai/zksync-os-agents"
repository = "https://github.com/romanbrodetski-ai/zksync-os-agents"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
alloy = { version = "1.7.3", default-features = false, features = ["serde", "serde-bincode-compat"] }
anyhow = "1"
async-trait = "0.1"
chrono = "0.4"
futures = "0.3"
num = "0.4"
semver = { version = "1", features = ["serde"] }
tokio = "1.45.1"
tracing = "0.1"
test-log = { version = "0.2.18", default-features = false }
zksync_os_interface = { version = "0.0.14" }
zksync_os_mempool = { path = "../zksync-os-server/lib/mempool" }
zksync_os_pipeline = { path = "../zksync-os-server/lib/pipeline" }
zksync_os_reth_compat = { path = "../zksync-os-server/lib/reth_compat" }
zksync_os_rpc_api = { path = "../zksync-os-server/lib/rpc_api" }
zksync_os_sequencer = { path = "../zksync-os-server/lib/sequencer" }
zksync_os_storage_api = { path = "../zksync-os-server/lib/storage_api" }
zksync_os_types = { path = "../zksync-os-server/lib/types" }
