[workspace]
members = ["tests"]
exclude = ["zksync-os-server"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["romanbrodetski-ai"]
homepage = "https://github.com/romanbrodetski-ai/zksync-os-agents"
repository = "https://github.com/romanbrodetski-ai/zksync-os-agents"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
