[package]
name = "zksync_os_external_tests"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
alloy = { version = "1.7.3", features = ["full"] }
anyhow = "1"
flate2 = "1"
hex = "0.4"
k256 = "0.13"
rand = "0.9"
reqwest = { version = "0.12.22", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
url = "2"
